--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     margin: 0;
     flex-direction: column;
+    overflow-x: hidden; /* Запретить горизонтальную прокрутку */
 }
 
 .saveLinks {
@@ -18,8 +19,8 @@ body {
 .container {
     padding: 20px;
     border-radius: 8px;
-    width: 30%;
-    margin-top: 420px;
+    width: 90%; /* Увеличить ширину для мобильных устройств */
+    margin-top: 100px;
 }
 
 h1 {
@@ -40,7 +41,7 @@ form {
     border-radius: 25px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
-    width: 50%;
+    width: 90%; /* Увеличить ширину для мобильных устройств */
 }
 
 input[type="url"] {
@@ -57,7 +58,6 @@ button {
     background-color: #00ff3c;
     color: rgb(0, 0, 0);
     border: none;
-    border-radius: 4px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     border-radius: 25px;
@@ -78,16 +78,16 @@ button:hover {
 
 #linkList {
     width: 100%;
-    padding-top: 650px; /* Добавьте верхний отступ */
+    padding-top: 150px; /* Добавьте верхний отступ */
 }
 
 .linkItem {
     display: flex;
     flex-direction: column;
-    margin-bottom: 80px;
+    margin-bottom: 40px; /* Уменьшите отступ для мобильных устройств */
     position: relative;
     background-color: #00000024;
-    padding: 2rem;
+    padding: 1rem; /* Уменьшите padding для мобильных устройств */
     border-color: #0dff00;
     border-width: 1px;
     border-style: solid;
@@ -121,7 +121,7 @@ button:hover {
 .linkItem a {
     color: #3cff00;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.5rem; /* Уменьшите размер шрифта для мобильных устройств */
     margin-bottom: 0.5rem;
 }
 
@@ -190,4 +190,34 @@ button:hover {
 ::-ms-scrollbar-thumb {
     background-color: #00ff3c;
     border-radius: 10px;
+}
+
+/* Мобильные стили */
+@media (max-width: 600px) {
+
+.body {
+    padding: 2rem;
+}
+
+    .container {
+        width: 100%;
+        margin-top: 20px; /* Уменьшите отступ сверху для мобильных устройств */
+    }
+
+    form {
+        width: 90%; /* Увеличьте ширину формы для мобильных устройств */
+        padding: 1rem; /* Уменьшите padding формы для мобильных устройств */
+    }
+
+    .linkItem {
+        padding: 1rem; /* Уменьшите padding элементов для мобильных устройств */
+    }
+
+    .linkItem a {
+        font-size: 1.2rem; /* Уменьшите размер шрифта для мобильных устройств */
+    }
+
+    #linkList {
+        padding-top: 100px; /* Уменьшите верхний отступ для мобильных устройств */
+    }
 }
