--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
     background: #000000;
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
+    align-items: flex-start; /* Изменено с center на flex-start */
+    min-height: 100vh;
     margin: 0;
     flex-direction: column;
     overflow-x: hidden;
@@ -20,6 +20,8 @@ body {
     color: transparent;
     animation: animateColor 4s linear infinite alternate-reverse;
     text-align: center;
+    margin-bottom: 4rem;
+    /* margin-top: 50%; */
 }
 
 @keyframes animateColor {
@@ -41,11 +43,11 @@ body {
 }
 
 .container {
-    padding: 20px;
     border-radius: 8px;
-    width: 90%;
-    margin-top: 80px;
+    width: 100%;
     justify-content: center;
+    position: relative;
+    margin-top: 15rem; /* Добавлено для отступа от верхнего меню */
 }
 
 h1 {
@@ -58,9 +60,9 @@ form {
     display: flex;
     flex-direction: column;
     position: fixed;
-    top: 7%;
+    top: 0; /* Изменено с 7% на 0 */
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     background-color: #000000;
     padding: 2rem;
     border-radius: 25px;
@@ -102,10 +104,13 @@ button {
 
 #shareBtn {
     width: 8%;
+    height: 8%;
 }
 
 #toggleDirectionBtn {
     width: 5%;
+    height: 5%;
+    
 }
 
 button:hover {
@@ -126,8 +131,8 @@ button:hover {
     width: 50%;
     gap: 2rem;
     padding-bottom: 100px; /* Additional bottom padding */
-    position: relative; /* For correct positioning */
-    margin-top: calc(10% + 80px); /* Adding margin-top to ensure it clears buttonMenu */
+    /* position: relative; */
+    /* margin-top: calc(50% + 280px);  */
 }
 
 
