--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
     overflow: auto; /* Enable scrolling if content is too large */
     opacity: 0; /* Initially invisible */
     transition: opacity 0.5s ease; /* Smooth transition for visibility */
-    box-shadow: 0 0 20px 20px #000000;
+    box-shadow: 0 0 40px 80px #000000;
     text-align: left;
 }
 
@@ -106,6 +106,13 @@ h1 {
     margin-bottom: 20px;
     text-align: center;
 }
+
+h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
 
 form {
     display: flex;
