--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #000000;
+    background-color: #000000f1;
     color: #ffffff;
     text-align: center;
     padding: 10px;
@@ -57,7 +57,7 @@ body {
     overflow: auto; /* Enable scrolling if content is too large */
     opacity: 0; /* Initially invisible */
     transition: opacity 0.5s ease; /* Smooth transition for visibility */
-    box-shadow: 0 0 40px 80px #000000;
+    box-shadow: 0 0 40px 80px #000000f1;
     text-align: left;
 }
 
