--- a/styles.css
+++ b/styles.css
@@ -338,24 +338,59 @@ button:hover {
     border-radius: 10px;
 }
 
+
+
+/*//////////////////////MOBILE STYLES/////////////////////*/
+
 @media (max-width: 600px) {
     .body {
-        height: auto;
-        padding: 2rem;
+        overflow-x: hidden;
     }
     .saveLinks {
         width: 100%;
+        padding: 2rem;
     }
+
+    #buttonMenu {
+   width: 90%;
+   gap: 1rem;
+    }
+    
+    #saveButton {
+        width: 70%;
+    }
+    
+    #shareBtn {
+        width: 20%;
+    }
+        
+    #toggleDirectionBtn {
+        width: 10%;
+    }
+    
+
+    
+    .infoInfo {
+        visibility: hidden;
+    }
+
+    .tooltip {
+        visibility: hidden;
+    }
+    
+        
     .container {
-        margin-top: 320px;
+        margin-top: 0px;
+        padding: 2rem;
     }
+    
     form {
         width: 90%;
         padding: 1rem;
     }
     .linkItem {
         padding: 1rem;
-        width: 100%;
+        width: 90%;
     }
     .linkItem a {
         font-size: 1.2rem;
