--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ button {
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     border-radius: 25px;
-    width: 85%;
+    width: 75%;
     border-color: #0dff00;
     border-width: 1px;
     border-style: solid;
@@ -183,6 +183,31 @@ button {
     border-color: #004cfc;
 }
 
+
+#myLinksBtn, #connectWalletBtn {
+    background-color: #00ff3c;
+    color: rgb(0, 0, 0);
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border-radius: 25px;
+    border-color: #004cfc;
+    border-width: 1px;
+    border-style: solid;
+    width: 4%;
+    background-color: #000000;
+    color: #00fc11;
+}
+
+#myLinksBtn:hover, #connectWalletBtn:hover {
+    background-color: #2c07ff;
+    border-color: #fc00fc;
+}
+
+
+
+
+
 button:hover {
     background-color: #000000;
     transition: all 0.3s ease-in-out;
@@ -210,7 +235,7 @@ button:hover {
     flex: 1 1 calc(25% - 2rem);
     background-color: #00000024;
     padding: 2rem;
-    border-color: #0dff00;
+    border-color: #0dff0057;
     border-width: 1px;
     border-style: solid;
     border-radius: 25px;
@@ -254,6 +279,7 @@ button:hover {
 .linkItem:hover {
     box-shadow: 0 0 15px 5px #0dff009e;
     transition: all 0.4s ease-in-out;
+    border-color: #0dff00;
 }
 
 .linkItem img {
@@ -268,6 +294,11 @@ button:hover {
     text-decoration: none;
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; /* Ограничивает количество строк до 4 */
+    overflow: hidden;
+    text-overflow: ellipsis; /* Добавляет многоточие для переполненного текста */
 }
 
 .linkItem a:hover {
@@ -277,17 +308,23 @@ button:hover {
 .linkItem p {
     margin-top: 1.5rem;
     line-height: 1.5rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3; /* Ограничивает количество строк до 4 */
+    overflow: hidden;
+    text-overflow: ellipsis; /* Добавляет многоточие для переполненного текста */
 }
+
 
 .delete-btn {
     position: absolute;
     top: 20px;
     right: 20px;
-    border-color: #0dff00;
+    border-color: #0dff0078;
     border-width: 1px;
     border-style: solid;
     background-color: #000000;
-    color: rgb(24, 241, 0);
+    color: #0dff0078;
     border-radius: 50%;
     width: 28px;
     height: 28px;
