--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,125 @@ body {
     overflow-x: hidden;
 }
 
+h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0; 
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #000000;
+    padding: 2rem;
+    border-radius: 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    width: 50%;
+}
+
+input[type="url"] {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #00fc11;
+    border-radius: 25px;
+    background-color: #000000;
+    color: #0dff00;
+    margin-top: 2rem;
+}
+
+button {
+    padding: 10px;
+    background-color: #00ff3c;
+    color: rgb(0, 0, 0);
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border-radius: 25px;
+    width: 75%;
+    border-color: #0dff00;
+    border-width: 1px;
+    border-style: solid;
+}
+
+button:hover {
+    background-color: #000000;
+    transition: all 0.3s ease-in-out;
+    color: #2fff00;
+    border-color: #0dff00;
+    border-width: 1px;
+    border-style: solid;
+}
+
+
+
+
+#buttonMenu {
+    display: flex;
+    justify-content: space-between;
+}
+
+#saveButton {}
+
+#shareBtn {
+    width: 8%;
+    height: 8%;
+    background-color: #000000;
+    color: #00fc11;
+}
+
+#shareBtn:hover {
+    background-color: #004cfc;
+    color: #ffffff;
+    border-color: #004cfc;
+}
+
+#toggleDirectionBtn {
+    width: 5%;
+    height: 5%;
+    background-color: #000000;
+}
+
+#toggleDirectionBtn:hover {
+    background-color: #ff07ee;
+    border-color: #004cfc;
+}
+
+
+#myLinksBtn, #connectWalletBtn {
+    background-color: #00ff3c;
+    color: rgb(0, 0, 0);
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border-radius: 25px;
+    border-color: #004cfc;
+    border-width: 1px;
+    border-style: solid;
+    width: 4%;
+    background-color: #000000;
+    color: #00fc11;
+}
+
+#myLinksBtn:hover, #connectWalletBtn:hover {
+    background-color: #2c07ff;
+    border-color: #fc00fc;
+}
+
+
+
+
 
 .titleContainer {
     display: flex;
@@ -71,9 +190,6 @@ body {
 }
 
 
-
-
-
 @keyframes animateColor {
     0% {
         color: #ff2b2b;
@@ -100,122 +216,7 @@ body {
     margin-top: 15rem; 
 }
 
-h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    text-align: center;
-}
 
-h2 {
-    font-size: 36px;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-
-form {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 0; 
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #000000;
-    padding: 2rem;
-    border-radius: 25px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    width: 50%;
-}
-
-input[type="url"] {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #00fc11;
-    border-radius: 25px;
-    background-color: #000000;
-    color: #0dff00;
-    margin-top: 2rem;
-}
-
-button {
-    padding: 10px;
-    background-color: #00ff3c;
-    color: rgb(0, 0, 0);
-    border: none;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    border-radius: 25px;
-    width: 75%;
-    border-color: #0dff00;
-    border-width: 1px;
-    border-style: solid;
-}
-
-#buttonMenu {
-    display: flex;
-    justify-content: space-between;
-}
-
-#saveButton {}
-
-#shareBtn {
-    width: 8%;
-    height: 8%;
-    background-color: #000000;
-    color: #00fc11;
-}
-
-#shareBtn:hover {
-    background-color: #004cfc;
-    color: #ffffff;
-    border-color: #004cfc;
-}
-
-#toggleDirectionBtn {
-    width: 5%;
-    height: 5%;
-    background-color: #000000;
-}
-
-#toggleDirectionBtn:hover {
-    background-color: #ff07ee;
-    border-color: #004cfc;
-}
-
-
-#myLinksBtn, #connectWalletBtn {
-    background-color: #00ff3c;
-    color: rgb(0, 0, 0);
-    border: none;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    border-radius: 25px;
-    border-color: #004cfc;
-    border-width: 1px;
-    border-style: solid;
-    width: 4%;
-    background-color: #000000;
-    color: #00fc11;
-}
-
-#myLinksBtn:hover, #connectWalletBtn:hover {
-    background-color: #2c07ff;
-    border-color: #fc00fc;
-}
-
-
-
-
-
-button:hover {
-    background-color: #000000;
-    transition: all 0.3s ease-in-out;
-    color: #2fff00;
-    border-color: #0dff00;
-    border-width: 1px;
-    border-style: solid;
-}
 
 #linkList {
     display: flex;
@@ -342,6 +343,43 @@ button:hover {
     scale: 1.2;
     color: rgb(255, 255, 255);
 }
+
+.number-container {
+    position: absolute;
+    bottom: 0px;
+    right: 50%;
+    width: min-content;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    padding-top: 0.25rem;
+    height: 28px;
+    border-top-right-radius: 5px; /* Скругление правого верхнего угла */
+    border-top-left-radius: 5px;  /* Скругление левого верхнего угла */
+    border-bottom-right-radius: 0; /* Без скругления правого нижнего угла */
+    border-bottom-left-radius: 0;  /* Без скругления левого нижнего угла */
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    border-color: #0dff0078;
+    border-width: 1px 1px 0 1px; /* Убираем нижнюю часть рамки */
+    border-style: solid;
+    font-size: 1rem;
+    color: #0dff0078;
+}
+
+
+.number-container.active {
+    background-color: #0000ff;
+    border-color: #0000ff;
+    color: #ffffff;
+    transition: background-color 0.3s;
+}
+
+
 
 ::-webkit-scrollbar {
     width: 3px;
