--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ form {
     top: 0; 
     left: 50%;
     transform: translateX(-50%);
-    background-color: #000000;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     padding: 2rem;
     border-radius: 25px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -46,7 +46,7 @@ input[type="url"] {
     border-radius: 25px;
     background-color: #000000;
     color: #0dff00;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 button {
@@ -71,7 +71,6 @@ button:hover {
     border-width: 1px;
     border-style: solid;
 }
-
 
 
 
