--- a/styles.css
+++ b/styles.css
@@ -83,10 +83,20 @@ button:hover {
 
 #shareBtn {
     width: 8%;
-    height: 8%;
+    max-height: 5%;
     background-color: #000000;
     color: #00fc11;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.1rem;
 }
+
+#copyIcon {
+
+    
+}
+
 
 #shareBtn:hover {
     background-color: #004cfc;
@@ -96,7 +106,7 @@ button:hover {
 
 #toggleDirectionBtn {
     width: 5%;
-    height: 5%;
+    height: auto;
     background-color: #000000;
 }
 
@@ -116,7 +126,7 @@ button:hover {
     border-color: #004cfc;
     border-width: 1px;
     border-style: solid;
-    width: 4%;
+    width: 4.5%;
     background-color: #000000;
     color: #00fc11;
 }
@@ -278,8 +288,9 @@ button:hover {
 
 .linkItem:hover {
     box-shadow: 0 0 15px 5px #0dff009e;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.25s ease-in-out;
     border-color: #0dff00;
+    scale: 1.02;
 }
 
 .linkItem img {
@@ -444,6 +455,7 @@ button:hover {
     
     #shareBtn {
         width: 20%;
+        
     }
         
     #toggleDirectionBtn {
@@ -482,6 +494,15 @@ button:hover {
         padding: 1rem;
         width: 90%;
     }
+
+    .linkItem:hover {
+        box-shadow: 0 0 15px 5px #0dff009e;
+        transition: all 0.25s ease-in-out;
+        border-color: #0dff00;
+        scale: none;
+    }
+
+
     .linkItem a {
         font-size: 1.2rem;
     }
