--- a/styles.css
+++ b/styles.css
@@ -94,26 +94,26 @@ button:hover {
 }
 
 #shareBtn.animated {
-    animation: greenGradient 2s forwards;
+    animation: solidColorTransition 1s forwards;
     background-size: 200% 200%;
     border-color: #00d2fc;
 }
 
-@keyframes greenGradient {
+@keyframes solidColorTransition {
     0% {
-        background: linear-gradient(0deg, #00aaf3, #52099f, #099f89, #004cfc);
-        background-size: 200% 400%;
-        background-position: 100% 0;
+        background-color: #00aaf3;
+    }
+    25% {
+        background-color: #52099f;
     }
     50% {
-        background: linear-gradient(180deg, #004cfc, #52099f, #099f89, #004cfc);
-        background-size: 200% 400%;
-        background-position: 0 100%;
+        background-color: #05d405;
+    }
+    75% {
+        background-color: #004cfc;
     }
     100% {
-        background: linear-gradient(0deg, #00aaf3, #52099f, #099f89, #004cfc);
-        background-size: 200% 400%;
-        background-position: 100% 0;
+        background-color: #9804f3;
     }
 }
 
