--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ button {
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     border-radius: 25px;
-    width: 85%;
+    width: 75%;
     border-color: #0dff00;
     border-width: 1px;
     border-style: solid;
@@ -439,6 +439,85 @@ button:hover {
     color: #ffffff;
     transition: all 0.3s ease-in-out;
 } */
+
+
+
+
+#savedPagesContainer {
+    position: fixed;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.savedPage {
+    width: 28px;
+    min-height: 80px;
+    border-color: #0dff0078;
+    border-style: solid;
+    border-width: 1px 1px 1px 0px;
+    color: #0dff0078;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    position: relative;
+    border-top-right-radius: 5px; 
+    border-top-left-radius: 0px;  
+    border-bottom-right-radius: 5px; 
+    border-bottom-left-radius: 0;  
+    background-color: #00000078;
+}
+
+.savedPage:hover {
+    background-color: #00ff3c;
+    color: #000000;
+}
+
+
+.savedPage.active {
+    background-color: #00ff3c; /* Слегка светлее, чем обычный */
+    border-color: #00ff3c;
+    color: #000;
+}
+
+
+.savedPage .delete-tab-btn {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    width: 10px;
+    height: 10px;
+    font-size: 0.1rem;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    /* border-width: 1px;
+    border-style: solid;
+    border-color: #00ff3c; */
+    font-size: 8px;
+    display: none;
+    cursor: pointer;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease-in-out;
+
+}
+
+
+.savedPage:hover .delete-tab-btn {
+    display: flex;
+    transition: all 0.3s ease-in-out;
+
+}
+
 
 
 
