--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ button {
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     border-radius: 25px;
-    width: 75%;
+    width: 77%;
     border-color: #0dff00;
     border-width: 1px;
     border-style: solid;
@@ -181,7 +181,10 @@ button:hover {
 }
 
 
-
+#connectWalletBtn {
+    visibility: hidden;
+    display: none;
+}
 
 
 .titleContainer {
