--- a/styles.css
+++ b/styles.css
@@ -427,7 +427,8 @@ button:hover {
     width: min-content;
     padding-left: 0.15rem;
     padding-right: 0.15rem;
-    padding-top: 0.25rem;
+    padding-top: 0.15rem;
+    padding-bottom: 0.1rem;
     height: 28px;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
