--- a/styles.css
+++ b/styles.css
@@ -425,8 +425,8 @@ button:hover {
     bottom: 0px;
     left: 28px;
     width: min-content;
-    padding-left: 0.2rem;
-    padding-right: 0.2rem;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
     padding-top: 0.15rem;
     padding-bottom: 0.1rem;
     height: 28px;
@@ -449,8 +449,8 @@ button:hover {
 }
 
 .comment-btn.has-comment {
-    background-color: 0000ff;
-    border-color: 0000ff;
+    background-color: #0000ff;
+    border-color: #0000ff;
     color: #ffffff;
     
 }
