--- a/styles.css
+++ b/styles.css
@@ -425,8 +425,8 @@ button:hover {
     bottom: 0px;
     left: 28px;
     width: min-content;
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
+    padding-left: 0.35rem;
+    padding-right: 0.35rem;
     padding-top: 0.15rem;
     padding-bottom: 0.1rem;
     height: 28px;
@@ -452,8 +452,21 @@ button:hover {
     background-color: #0000ff;
     border-color: #0000ff;
     color: #ffffff;
-    
+    animation: pulse 2s infinite;
 }
+
+@keyframes pulse {
+    0% {
+        background-color: #0000ff;
+    }
+    50% {
+        background-color: #000000;
+    }
+    100% {
+        background-color: #0000ff;
+    }
+}
+
 
 #savedPagesContainer {
     position: fixed;
