--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,37 @@ button:hover {
     border-style: solid;
 }
 
+
+@keyframes typewriter {
+    from { width: 0; }
+    to { width: 100%; }
+}
+
+@keyframes blinkCursor {
+    50% { border-color: transparent; }
+}
+
+.typewriter-placeholder {
+    position: relative;
+}
+
+.typewriter-placeholder::after {
+    content: attr(data-text);
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 2px solid;
+    width: 0;
+    animation: typewriter 3s steps(30) 1s forwards, blinkCursor 0.75s steps(30) infinite;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+
+
+
 #buttonMenu {
     display: flex;
     justify-content: space-between;
