--- a/styles.css
+++ b/styles.css
@@ -96,11 +96,8 @@ button:hover {
 }
 
 .hidden {
-    visibility: hidden;
+    display: none;
 }
-
-
-
 
 #buttonMenu {
     display: flex;
@@ -640,7 +637,36 @@ button:hover {
     color: #ffffff;
 }
 
-/*//////////////////////MOBILE STYLES/////////////////////*/
+/* Добавить стили для контейнера сгенерированной ссылки */
+#generatedLinkContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    background-color: #000;
+    padding: 10px;
+    border-radius: 10px;
+    display: none;
+}
+
+#generatedLink {
+    flex-grow: 1;
+    padding: 5px;
+    border: 1px solid #00fc11;
+    border-radius: 5px;
+    background-color: #000;
+    color: #0dff00;
+}
+
+#copyLinkBtn {
+    padding: 5px 10px;
+    background-color: #00ff3c;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    color: #000;
+    margin-left: 10px;
+}
 
 @media (max-width: 600px) {
     .body {
@@ -724,6 +750,18 @@ button:hover {
     
     #linkList {
         margin-left: 0%;
+        width: 100%;
+    }
+
+    #generatedLinkContainer {
+        flex-direction: row;
+        align-items: flex-start;
+        display:flex;
+        width: 20%;
+    }
+    
+    #copyLinkBtn {
+        margin-top: 10px;
         width: 100%;
     }
 }
