--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ button:hover {
     width: 8%;
     max-height: 8%;
     background-color: #000000;
-    color: #000000;
+    color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -638,6 +638,10 @@ button:hover {
 }
 
 /* Добавить стили для контейнера сгенерированной ссылки */
+#generatedLinkContainer.hidden {
+    display: none;
+}
+
 #generatedLinkContainer {
     display: flex;
     justify-content: space-between;
@@ -646,16 +650,18 @@ button:hover {
     background-color: #000;
     padding: 10px;
     border-radius: 10px;
-    display: none;
 }
+
 
 #generatedLink {
     flex-grow: 1;
     padding: 5px;
     border: 1px solid #00fc11;
-    border-radius: 5px;
+    border-radius: 25px;
     background-color: #000;
     color: #0dff00;
+    border-style: none;
+    
 }
 
 #copyLinkBtn {
@@ -757,11 +763,16 @@ button:hover {
         flex-direction: row;
         align-items: flex-start;
         display:flex;
-        width: 20%;
+        width: 90%;
+        max-width: min-content;
+       
     }
     
     #copyLinkBtn {
-        margin-top: 10px;
-        width: 100%;
+        width: 3rem;
+        height: 100%;
+        border-radius: 25px;
+        background-color: #000;
+        
     }
 }
