--- a/styles.css
+++ b/styles.css
@@ -539,23 +539,23 @@ button:hover {
 
 /* Define color classes */
 .savedPage.color1 {
-    border-color: #FF5733; /* Example color */
+    border-color: #722716; /* Example color */
 }
 
 .savedPage.color2 {
-    border-color: #33FF57; /* Example color */
+    border-color: #229337; /* Example color */
 }
 
 .savedPage.color3 {
-    border-color: #3357FF; /* Example color */
+    border-color: #152465; /* Example color */
 }
 
 .savedPage.color4 {
-    border-color: #915002f0; /* Example color */
+    border-color: #5e3c12f0; /* Example color */
 }
 
 .savedPage.color5 {
-    border-color: #c3ff00; /* Example color */
+    border-color: #67820d; /* Example color */
 }
 
 .savedPage.color6 {
