--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: Arial, sans-serif;
     color: #ffffff;
@@ -18,6 +19,13 @@ h1 {
 }
 
 h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+
+h3 {
     font-size: 36px;
     margin-bottom: 20px;
     text-align: center;
@@ -70,7 +78,6 @@ button:hover {
     border-width: 1px;
     border-style: solid;
 }
-
 
 @keyframes typewriter {
     from { width: 0; }
@@ -277,6 +284,61 @@ button:hover {
     100% {
         color: #00000000;
     }
+}
+
+.titleInputContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0rem;   
+}
+
+#pageTitle {
+    padding: 10px;
+    border: 1px 1px 0 0;
+    border-radius: 25px 25px 0px 0;
+    background-color: #000000;
+    border-color: #0dff0057;
+    border-width: 1px 1px 0px 1px;
+    border-style: solid;
+    color: #838383;
+    margin-right: 1rem;
+    width: min-content;
+    font-size: 3rem;
+    text-align: center;
+    background-color: #000000;
+    }
+
+    .hidden {
+        display: none;
+    }
+    
+    .titleInputContainer.hidden {
+        display: none;
+    }
+    
+    .titleInputContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1rem;   
+    }
+        
+
+#pageTitle::placeholder {
+    color: #5f5f5f;
+    font-size: 2rem;
+}
+
+
+.icon {
+    position: flex;
+    /* right: 0.5em;
+    top: 50%; */
+    transform: translateY(0%);
+    font-size: 2rem;
+    pointer-events: none;
+    color: #ffffff;
 }
 
 .container {
@@ -493,7 +555,6 @@ button:hover {
     }
 }
 
-
 #savedPagesContainer {
     position: fixed;
     left: 0;
@@ -523,7 +584,29 @@ button:hover {
     border-bottom-right-radius: 10px; 
     border-bottom-left-radius: 0;  
     background-color: #00000078;
+    white-space: nowrap;
+    writing-mode: vertical-rl;
+    text-align: center;
+    /* text-transform: uppercase; */
+    font-size: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
+
+.savedPageTitle {
+    white-space: nowrap;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-75%, -50%);
+    height: 8ch; /* Display up to 6 characters */
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* max-width: none; */
+}
+
+
 
 .savedPage:hover {
     background-color: #00ff3c;
@@ -535,7 +618,6 @@ button:hover {
     border-color: #00ff3c;
     color: #000;
 }
-
 
 /* Define color classes */
 .savedPage.color1 {
@@ -562,7 +644,6 @@ button:hover {
     border-color: #7e0218; /* Example color */
 }
 
-
 /* Active savedPage should have same background color as its border */
 .savedPage.active {
     background-color: #33FF57;
@@ -587,9 +668,6 @@ button:hover {
 .linkItem.active p {
     color: inherit;
 }
-
-
-
 
 .savedPage .delete-tab-btn {
     position: absolute;
@@ -699,7 +777,6 @@ button:hover {
     border-radius: 10px;
 }
 
-
 #generatedLink {
     flex-grow: 1;
     padding: 5px;
@@ -708,7 +785,6 @@ button:hover {
     background-color: #000;
     color: #0dff00;
     border-style: none;
-    
 }
 
 #copyLinkBtn {
@@ -761,7 +837,6 @@ button:hover {
     
     #shareBtn {
         width: 20%;
-        
     }
         
     #toggleDirectionBtn {
@@ -827,7 +902,6 @@ button:hover {
         display:flex;
         width: 90%;
         max-width: max-content;
-       
     }
     
     #copyLinkBtn {
@@ -835,6 +909,5 @@ button:hover {
         height: 100%;
         border-radius: 25px;
         background-color: #000;
-        
     }
 }
