--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,32 @@ body {
     background: #000000;
     display: flex;
     justify-content: center;
-    align-items: flex-start; 
+    align-items: flex-start;
     min-height: 100vh;
     margin: 0;
     flex-direction: column;
     overflow-x: hidden;
+}
+
+.canvas-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Ensure the canvas is behind all other elements */
+}
+
+
+form, .container {
+    z-index: 1;
 }
 
 h1 {
@@ -243,7 +264,7 @@ button:hover {
     position: fixed; 
     width: 50%;
     height: 80%;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #000000f1;
@@ -295,18 +316,19 @@ button:hover {
 
 #pageTitle {
     padding: 10px;
+    padding-top: 1rem;
     border: 1px 1px 0 0;
     border-radius: 25px 25px 0px 0;
     background-color: #000000;
     border-color: #0dff0057;
     border-width: 1px 1px 0px 1px;
     border-style: solid;
-    color: #838383;
+    color: #0dff00;
     margin-right: 1rem;
-    width: min-content;
-    font-size: 3rem;
+    width: max-content;
+    font-size: 2rem;
     text-align: center;
-    background-color: #000000;
+    background-color: #00000000;
     }
 
     .hidden {
@@ -326,7 +348,7 @@ button:hover {
         
 
 #pageTitle::placeholder {
-    color: #5f5f5f;
+    color: #0dff0057;
     font-size: 2rem;
 }
 
@@ -362,7 +384,7 @@ button:hover {
 
 .linkItem {
     flex: 1 1 calc(25% - 2rem); /* Adjust as needed for grid layout */
-    background-color: #00000024;
+    background-color: #000000c8;
     padding: 2rem;
     border-color: #0dff0057;
     border-width: 1px;
@@ -816,6 +838,25 @@ button:hover {
     .body {
         overflow-x: hidden;
     }
+
+    .canvas-container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: auto;
+        height: auto;
+        z-index: -1; /* Ensure the canvas is behind all other elements */
+    }
+
+
+    
     .saveLinks {
         width: 90%;
         padding: 2rem;
