--- a/styles.css
+++ b/styles.css
@@ -242,7 +242,7 @@ button:hover {
 
 .saveLinksTitle {
     font-size: 3rem;
-    background-image: linear-gradient(to right, #2600ff, #007bff, #1eff00, #f0b3b3, #ede1e1);
+    background-image: linear-gradient(to right, #2600ff, #007bff, #1eff00, #01ad18, #0054dc);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
@@ -291,19 +291,19 @@ button:hover {
 
 @keyframes animateColor {
     0% {
-        color: #ff2b2b;
+        color: #522bff;
     }
     25% {
-        color: #00000000;
+        color: #bf00ff;
     }
     50% {
-        color: #ff00e600;
+        color: #09ff00;
     }
     75% {
-        color: #ff0000;
+        color: #d900ff;
     }
     100% {
-        color: #00000000;
+        color: #522bff;
     }
 }
 
@@ -318,10 +318,10 @@ button:hover {
     padding: 10px;
     padding-top: 1rem;
     border: 1px 1px 0 0;
-    border-radius: 25px 25px 0px 0;
+    border-radius: 25px 25px 25px 25px;
     background-color: #000000;
     border-color: #0dff0057;
-    border-width: 1px 1px 0px 1px;
+    border-width: 0px 0px 1px 0px;
     border-style: solid;
     color: #0dff00;
     margin-right: 1rem;
@@ -343,7 +343,7 @@ button:hover {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-bottom: 1rem;   
+        margin-bottom: 3rem;   
     }
         
 
@@ -649,8 +649,6 @@ button:hover {
     text-overflow: ellipsis;
     /* max-width: none; */
 }
-
-
 
 .savedPage:hover {
     background-color: #00ff3c;
