--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,29 @@ button:hover {
 
 #saveButton {}
 
+
+#saveButton.loading {
+    background-color: #00ff3c; /* Maintain the background color */
+    background-image: url('/img/l_w.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain; /* Ensure the image maintains its aspect ratio */
+    color: transparent; /* Hide the text while loading */
+}
+
+#saveButton.loading:hover {
+    background-color: #000000; /* Maintain the hover background color */
+    background-image: url('/img/l_g.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain; /* Ensure the image maintains its aspect ratio */
+    color: transparent; /* Hide the text while loading */
+}
+
+
+
+
+
 #shareBtn {
     width: 8%;
     max-height: 8%;
@@ -314,41 +337,41 @@ button:hover {
     margin-bottom: 0rem;   
 }
 
-#pageTitle {
-    padding: 10px;
-    padding-top: 1rem;
-    border: 1px 1px 0 0;
-    border-radius: 25px 25px 25px 25px;
-    background-color: #000000;
-    border-color: #0dff0057;
-    border-width: 0px 0px 1px 0px;
-    border-style: solid;
-    color: #0dff00;
-    margin-right: 1rem;
-    width: max-content;
-    font-size: 2rem;
-    text-align: center;
-    background-color: #00000000;
-    }
+ #pageTitle {
+            padding: 10px;
+            padding-top: 1rem;
+            border: 1px 1px 0 0;
+            border-radius: 25px 25px 25px 25px;
+            background-color: #000000;
+            border-color: #0dff0057;
+            border-width: 0px 0px 1px 0px;
+            border-style: solid;
+            color: #0dff00;
+            margin-right: 1rem;
+            width: max-content;
+            font-size: 2rem;
+            text-align: center;
+            background-color: #00000000;
+        }
 
-    .hidden {
-        display: none;
-    }
-    
-    .titleInputContainer.hidden {
-        display: none;
-    }
-    
-    .titleInputContainer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 3rem;   
-    }
+        .hidden {
+            display: none;
+        }
+
+        .titleInputContainer.hidden {
+            display: none;
+        }
+
+        .titleInputContainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 3rem;
+        }
         
 
 #pageTitle::placeholder {
-    color: #0dff0057;
+    color: #0dff002a;
     font-size: 2rem;
 }
 
