--- a/styles.css
+++ b/styles.css
@@ -478,7 +478,7 @@ button:hover {
     display: block;
     width: 100%;
     height: auto;
-    margin-bottom: 15px;
+    margin-bottom: 2rem;
     border-radius: 15px;
 }
 
