--- a/styles.css
+++ b/styles.css
@@ -248,7 +248,7 @@ button:hover {
 
 #myLinksBtn:hover, #connectWalletBtn:hover {
     background-color: #2c07ff;
-    border-color: #fc00fc;
+    border-color: #00fc11;
 }
 
 #connectWalletBtn {
